--- a/src/main/resources/sw1/hosp/Dr_workplace.fxml
+++ b/src/main/resources/sw1/hosp/Dr_workplace.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sw1.hosp.DrWorkplace"
-            prefHeight="400.0" prefWidth="600.0" >
+<GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="sw1.hosp.Dr_WorkplaceController">
+    <padding>
+        <Insets bottom="20" left="20" right="20" top="20" />
+    </padding>
+    <hgap>10</hgap>
+    <vgap>10</vgap>
 
-</AnchorPane>
+    <Label fx:id="ID" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Label fx:id="Name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Label fx:id="Date" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Label fx:id="Address" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+    <Label fx:id="number" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
+
+
+</GridPane>
+
+
+
+
+
