--- a/src/main/resources/sw1/hosp/Login.fxml
+++ b/src/main/resources/sw1/hosp/Login.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sw1.hosp.Login"
-            prefHeight="400.0" prefWidth="600.0" >
+<GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="sw1.hosp.LoginController">
+    <padding>
+        <Insets bottom="20" left="20" right="20" top="20" />
+    </padding>
+    <hgap>10</hgap>
+    <vgap>10</vgap>
 
-</AnchorPane>
+    <Label text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+    <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+    <Button onAction="#handleLoginButtonAction" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+    <Label fx:id="messageLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+</GridPane>
