--- a/src/main/resources/sw1/hosp/Payment.fxml
+++ b/src/main/resources/sw1/hosp/Payment.fxml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="sw1.hosp.PaymentController">
+    <Label text="환자 수납 화면" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10"/>
 </AnchorPane>
