--- a/src/main/resources/sw1/hosp/Reception.fxml
+++ b/src/main/resources/sw1/hosp/Reception.fxml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="sw1.hosp.ReceptionController">
+    <VBox spacing="10" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
+        <TableView fx:id="patientTable">
+            <columns>
+                <TableColumn text="고유번호" fx:id="columnId">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="id"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="이름" fx:id="columnName">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="name"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="생년월일" fx:id="columnBirthDate">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="birthDate"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="주소" fx:id="columnAddress">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="address"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="연락처" fx:id="columnContact">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="contact"/>
+                    </cellValueFactory>
+                </TableColumn>
+            </columns>
+        </TableView>
+        <HBox spacing="10">
+            <Button text="환자 불러오기" onAction="#handleFindRegistration"/>
+            <Button text="환자 등록취소" onAction="#handleCancelRegistration"/>
+        </HBox>
+    </VBox>
 </AnchorPane>
