--- a/src/main/resources/sw1/hosp/Dr_workplace.fxml
+++ b/src/main/resources/sw1/hosp/Dr_workplace.fxml
@@ -1,30 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="sw1.hosp.Dr_WorkplaceController">
-    <padding>
-        <Insets bottom="20" left="20" right="20" top="20" />
-    </padding>
-    <hgap>10</hgap>
-    <vgap>10</vgap>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sw1.hosp.Dr_WorkplaceController">
+    <right>
+        <VBox prefHeight="800.0" prefWidth="618.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="증상">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <ButtonBar prefHeight="40.0" prefWidth="200.0">
+                    <buttons>
+                        <Button mnemonicParsing="false" onAction="#handleFindSymptom" text="찾기" />
+                        <Button mnemonicParsing="false" text="Button" />
+                    </buttons>
+                </ButtonBar>
+                <TableView fx:id="symptom_view" nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="707.0">
+                    <columns>
+                        <TableColumn fx:id="symptomId" prefWidth="75.0" text="증상ID">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="symptomId" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="symptomName" prefWidth="542.0" text="증상">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="symptomName" />
+                            </cellValueFactory>
+                        </TableColumn>
+                    </columns>
+                </TableView>
+                <Label text="처방">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <ButtonBar prefHeight="22.0" prefWidth="650.0">
+                    <buttons>
+                        <Button mnemonicParsing="false" onAction="#handleFindMedication" text="찾기" />
+                        <Button mnemonicParsing="false" text="Button" />
+                    </buttons>
+                </ButtonBar>
+                <TableView fx:id="medication_view" prefHeight="400.0" prefWidth="618.0">
+                    <columns>
+                        <TableColumn fx:id="medicationId" prefWidth="103.0" text="약물ID">
+                            <cellValueFactory><PropertyValueFactory property="medicationId" /></cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="medicationName" prefWidth="298.0" text="약명">
+                            <cellValueFactory><PropertyValueFactory property="medicationName" /></cellValueFactory>
+                        </TableColumn>
+                        <TableColumn editable="true" prefWidth="109.0" text="횟수">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="madication_dosage" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn editable="true" prefWidth="107.0" text="일수">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="madication_day" />
+                            </cellValueFactory></TableColumn>
 
-    <Label fx:id="ID" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-    <Label fx:id="Name" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-    <Label fx:id="Date" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-    <Label fx:id="Address" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-    <Label fx:id="number" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                    </columns>
+                </TableView>
+            </children>
+        </VBox>
+    </right>
+    <bottom>
+        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <buttons>
+                <Button mnemonicParsing="false" text="Button" />
+                <Button mnemonicParsing="false" text="Button" />
+            </buttons>
+        </ButtonBar>
+    </bottom>
+    <left>
+        <VBox prefHeight="617.0" prefWidth="632.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="&lt;환자정보&gt;" textAlignment="CENTER">
+                    <font>
+                        <Font name="System Bold" size="16.0" />
+                    </font>
+                </Label>
+                <GridPane prefHeight="261.0" prefWidth="632.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="311.0" minWidth="10.0" prefWidth="136.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.0" minWidth="10.0" prefWidth="496.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Label text="이름" />
+                        <Label text="생년월일" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+                        <TextField fx:id="name" GridPane.columnIndex="1" />
+                        <TextField fx:id="birthDate" prefHeight="17.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="담당의" GridPane.rowIndex="2" />
+                        <TextField fx:id="drname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="address" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="주소" GridPane.rowIndex="3" />
+                        <Label text="연락처" GridPane.rowIndex="4" />
+                        <TextField fx:id="contact" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    </children>
+                </GridPane>
+                <Label text="&lt;진료내역&gt;">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <TableView fx:id="medicalrecord_view" prefHeight="617.0" prefWidth="632.0">
+                    <columns>
+                        <TableColumn fx:id="medicalrecordId" prefWidth="70.33332824707031" text="진료ID">
+                            <cellValueFactory><PropertyValueFactory property="medicalrecordId"/></cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="diagnosisName" prefWidth="152.66665649414062" text="병명">
+                            <cellValueFactory><PropertyValueFactory property="diagnosisName"/> </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="notes" prefWidth="203.66665649414062" text="소견">
+                            <cellValueFactory><PropertyValueFactory property="notes"/> </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="date" prefWidth="107.66668701171875" text="일시">
+                            <cellValueFactory><PropertyValueFactory property="date"/> </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="drName" minWidth="0.0" prefWidth="96.66668701171875" text="담당의">
+                            <cellValueFactory><PropertyValueFactory property="drName"/> </cellValueFactory>
+                        </TableColumn>
 
-
-
-</GridPane>
-
-
-
-
-
+                    </columns>
+                </TableView>
+            </children>
+        </VBox>
+    </left>
+</BorderPane>
